--- a/city-tours/src/components/Tour/Tour.scss
+++ b/city-tours/src/components/Tour/Tour.scss
@@ -36,13 +36,13 @@
       margin-bottom: 0.4rem;
     }
 
-    h4{
+    h4 {
       text-transform: capitalize;
       margin-bottom: 1rem;
     }
 
     h5 {
-1      span {
+      span {
         cursor: pointer;
         font-size: 1.4rem;
         color: $mainGreen;
